fix: C4R-350 The tables in the NGO profile tabs always have a horizontal scroll bar

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -106,7 +106,8 @@
 }
 
 .rdt_TableWrapper > div:first-of-type {
-  overflow: scroll !important;
+  overflow: scroll;
+  @apply min-[1650px]:overflow-x-hidden;
   /* added for action menu to be visible without scrolling */
   padding-bottom: 7rem !important;
 }
